--- a/index.pug
+++ b/index.pug
@@ -1,12 +1,6 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width,initial-scale=1")
-    title Mustart!
-    meta(name="description" content="")
-    link(rel="stylesheet" href="css/styles.min.css")
+include templates/all
 
-  body
-    h1 Hello World!
-    script(src="js/bundle.min.js")
++mustart-start
+  h1
+    span.mustart-gradient-rebl-text Hello World!
+  +mustart-end
