--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -1,8 +1,5 @@
-@import '../node_modules/compass-mixins/lib/compass/css3'
-@import '../node_modules/compass-mixins/lib/compass/reset'
+@import 'variables/all'
+@import 'mixins/all'
 
-@import '../node_modules/mustart-media-queries/src/styles'
-@import '../node_modules/mustart-gradients/src/core'
-
-@import '../node_modules/bourbon/core/bourbon'
-@import '../node_modules/bourbon-neat/core/neat'
+@import 'libraries'
+@import 'main'
