ADD: default variables and templates

--- a/styles/_main.sass
+++ b/styles/_main.sass
@@ -1,6 +1,14 @@
 +global-reset
-+mustart-gradient(green, blue, rebl)
++mustart-gradients
++mustart-gradient(#9cbf11, green, my)
+
+body
+  font-family: $main-font
+  padding: $padding
 
 h1
   span
-    font-size: 300%
+    text-transform: lowercase
+    font:
+      size: 300%
+      weight: bold
