--- a/index.pug
+++ b/index.pug
@@ -1,6 +1,16 @@
 include templates/all
 
 +mustart-start
-  h1
-    span.mustart-gradient-my-text Hello World!
+  .group
+    section
+      .tunas
+        .leaf
+        .leaf
+        .stick
+    section
+      .tunas.tunas-balance
+        .leaf
+        .leaf
+        .stick
+        
   +mustart-end
