--- a/styles/variables/_globals.sass
+++ b/styles/variables/_globals.sass
@@ -1,2 +1,11 @@
 $padding: 40px
 $main-font: Helvetica, Arial, sans-serif
+
+$leaf-color-light: #9cbf11
+$leaf-color-dark: green
+$leaf-default-width: 50px
+$stick-default-width: 5px
+$stick-default-height: 100px
+
+$planta-default-width: 100px
+$planta-default-height: 150px
