--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -4,8 +4,8 @@ mixin mustart-start
     head
       meta(charset="UTF-8")
       meta(name="viewport" content="width=device-width,initial-scale=1")
-      title Mustart!
-      meta(name="description" content="")
+      title Planta
+      meta(name="description" content="Planta")
       link(rel="stylesheet" href="css/styles.min.css")
     body
       if block
