ADD: tunas-single sample

--- a/index.pug
+++ b/index.pug
@@ -12,4 +12,9 @@ include templates/all
         .leaf
         .leaf
         .stick
+    section
+      .tunas.tunas-single
+        .leaf
+        .leaf
+        .stick
   +mustart-end
