REMOVE: tunas-single

--- a/index.pug
+++ b/index.pug
@@ -13,7 +13,7 @@ include templates/all
         .leaf
         .stick
     section
-      .tunas.tunas-single
+      .tunas
         .leaf
         .leaf
         .stick
