--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -6,12 +6,12 @@ mixin mustart-start
       meta(name="viewport" content="width=device-width,initial-scale=1")
       title Planta
       meta(name="description" content="Planta")
-      link(rel="stylesheet" href="/css/styles.min.css?v=231120191631")
+      link(rel="stylesheet" href="/styles/styles.min.css?v=27082020")
     body
       if block
         block
         
 mixin mustart-end
-  script(src="/js/bundle.min.js?v=231120191631")
+  script(src="/scripts/script.min.js?v=27082020")
   if block
     block
